exercises/ex1/nginx-route.yaml
---
apiVersion: v1
kind: Route
metadata:
  name: nginx-route
spec:
  to:
    kind: Service
    name: nginx-service
